# Terminal-File-Manager

./: CMakeLists.txt  CONFIG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TFV_config_template.txt  commandLine.cpp  commandLine.h  commands.cpp  commands.h  drawLayout.cpp  drawLayout.h  keyTracker.cpp  keyTracker.h  main.cpp  miscFunctions.cpp  miscFunctions.h  terminalCommands.cpp  terminalCommands.h
helpInfo/: cd.txt  debug.txt  del.txt  help.txt  initConfig.txt  mkdir.txt  mkf.txt  nvim.txt  refreshConfig.txt  rm.txt  setConfigOption.txt  tco.txt
src/: commandLine.cpp  commandLine.h  commands.cpp  commands.h  configInfo.cpp  configInfo.h  drawLayout.cpp  drawLayout.h  keyTracker.cpp  liveSearch.cpp  liveSearch.h  main.cpp  miscFunctions.cpp  miscFunctions.h  readConfig.cpp  readConfig.h  simulation.cpp  simulation.h  terminalCommands.cpp  terminalCommands.h
